fix: fix calculation